details, etc, now look a bit different, but still intuitive, so that
you'll have no major problems with it. Enjoy. In the next version
support for MSN is expected.

4.2.0
-----

This version as promised adds MSN protocol support. It's expected to be
buggy, but releasing it in this shape will help me to fix them faster.
Just don't forget to report if you saw something wierd (not including
knocking under your bed :)

Some information for Yahoo and MSN contacts is filled in now to make it
easy to launch a browser in order to see details.

Screen updating routines work more efficiently now.

Multiple contact selection box now has color highlight for different IM
flavours.

Now it's possible to associate sounds with particular contacts from any
IM network.

Non-icq contacts were renamed to "info cards", and now to add one the
"Find/add" dialog should be used. Also, an info card can be placed to
any group (if you have such a mode on).

Cicqsync script should work better now. Specially under FreeBSD where it
didn't work at all.

4.2.1
-----

Ok, it was late yesterday, I tried to fix something in the night, but it
resulted to program's bailing out with segfault on every attempt to browse
events history. So this is a bugfix.

Passwords remembering worked horribly. Fixed.

4.5
---

This release adds a very important improvement. ICQ communications were
moved to the library of ickle client, written by Barnaby Gray
<barnaby@beedesign.co.uk>. Since the library supports the icq2000
protocol, this version centericq doesn't loose messages unlike previous
ones. Also it's now possible to send SMSes. Though, the library is not
complete yet, so features such as finding users, updating details,
sending contacts and files are now gone. Temporary.

Another major rewrite the event processing system suffered. Now events
are processed in a nicer way, and the code is what I can now be proud
about, again, unlike previous versions.