@@ -1,5 +1,5 @@
 AC_INIT(aclocal.m4)
-AM_INIT_AUTOMAKE(centericq, 4.5)
+AM_INIT_AUTOMAKE(centericq, 4.5.0)
 
 AC_PROG_CC
 AC_PROG_CXX
