@@ -669,3 +669,8 @@ sending contacts and files are now gone. Temporary.
 Another major rewrite the event processing system suffered. Now events
 are processed in a nicer way, and the code is what I can now be proud
 about, again, unlike previous versions.
+
+Because of the mentioned above changes some parts of centericq's user
+interface things were changed. I don't feel like remembering all of them
+now, so just take a look yourself. What's for sure, they made the whole
+thing only better.
